--- a/styles/section/_sectionFive.scss
+++ b/styles/section/_sectionFive.scss
@@ -16,9 +16,9 @@
 
 .portfolio--active2 {
     height: 550px;
-    // @include media(750px) {
-    //    height: 750px;
-    //  }
+    @include media(750px) {
+       height: 625px;
+     }
 }
 
 .portfolio__container {
@@ -119,7 +119,7 @@
 
     grid-template-rows: 300px 300px;
     @include media(750px) {
-       grid-template-rows: 300px 300px 300px;
+       grid-template-rows: 300px 300px 300px 300px;
      }
 
 }
