--- a/styles/section/_sectionThree.scss
+++ b/styles/section/_sectionThree.scss
@@ -243,13 +243,13 @@
 // }
 
 
-progress::-moz-progress-bar { 
-    background: $lightColour; 
-}
+// progress::-moz-progress-bar { 
+//     background: $lightColour; 
+// }
 
-progress::-webkit-progress-bar { 
-    background: #fff; 
-}
-progress::-webkit-progress-value { 
-    background: $lightColour; 
-}
+// progress::-webkit-progress-bar { 
+//     background: #fff; 
+// }
+// progress::-webkit-progress-value { 
+//     background: $lightColour; 
+// }
